# saiph

./: .gitignore  .gitmodules  Cargo.toml  README.md
chess-core/: Cargo.toml
chess-core/benches/: perft_benchmark.rs
chess-core/src/: bitboard.rs  board.rs  chess_move.rs  (+9 more)
datagen/: Cargo.toml
engine/: Cargo.toml  build.rs
engine/benches/: perft_benchmark.rs
engine/src/: board.rs  clock.rs  color.rs  engine_uci.rs  evaluation.rs  lib.rs  main.rs  move_generation.rs  move_ordering.rs  movegen.rs  moveord.rs  nnue.rs  piece.rs  piece_square_table.rs  pv.rs  pv_table.rs  search.rs  search_limits.rs  searcher.rs  square.rs  standard_printer.rs  standard_searcher.rs  standard_searcherpool.rs  tables.rs  threadpool.rs  timer.rs  transposition.rs  transposition_table.rs  uci.rs  uci_move.rs  zobrist.rs
engine/src/evaluation/: hce.rs  nnue.rs
engine/src/move_generation/: castling.rs  en_passant.rs  king.rs  knight.rs  pawn_capture.rs  quiet_pawn.rs  slider.rs
engine/src/movegen/: attacks.rs  castling.rs  en_passant.rs  king.rs  knight.rs  pawn_capture.rs  quiet_pawn.rs  slider.rs
engine/src/types/: bitboard.rs  castling_rights.rs  chess_move.rs  color.rs  direction.rs  line.rs  mod.rs  piece.rs  promotion.rs  search_limits.rs  square.rs  uci_move.rs
movgen/: Cargo.toml  build.rs
src/: bitboard.rs  board.rs  engine_uci.rs  evaluation.rs  fen_parser.rs  lib.rs  main.rs  move_ordering.rs  player.rs  search.rs  square.rs  transposition_table.rs
table-gen/: Cargo.toml
tablegen/: Cargo.toml
tables-generator/: Cargo.toml
wasm/: Cargo.toml  build.sh  snippet.js
wasm/src/: engine_wasm.rs  lib.rs  script_path.js  worker.js
www/: package-lock.json  package.json
(+59 files in other folders)
