[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
arrayvec = "0.7.4"

[build-dependencies]
tablegen = { path = "../tablegen" }