[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-time = "1.1.0"
arrayvec = "0.7.4"
types = { path = "../types" }

[build-dependencies]
tablegen = { path = "../tablegen" }
types = { path = "../types" }