[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-time = "1.1.0"
arrayvec = "0.7.4"

[build-dependencies]
tablegen = { path = "../tablegen" }

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "perft_benchmark"
harness = false
