[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.99"
web-sys = { version = "0.3.69", features = [
    "MessageEvent",
    "DedicatedWorkerGlobalScope",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "Blob",
    "Url",
    "Window",
] }

console_error_panic_hook = { version = "0.1.7" }
engine = { path = "../engine" }
